fix overflow not working properly

--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,6 @@ html{
   background-color: #F5F5F3;
 }
 
-body{
-  overflow: hidden;
-}
-
 .apps {
 	width: 100%;
 	margin:  10px auto;
